Added batch message execution and setup project.

--- a/NQueueStuffer.UI/View/MdiForm.resx
+++ b/NQueueStuffer.UI/View/MdiForm.resx
@@ -179,6 +179,56 @@
         4/EbOHryGmJnR5AZet7+MbV9bS0O/AGd2vKsTr+IQwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="startBatchToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAo6SURBVFhHrVcJVBRXFi1WNaggoijQICNqJGCM4AJGBJcY
+        N0Q0LgRIIqKIRkFEUcSjsgioxAACohI3EFxRliyaqGg0Jm6ZOeMSowGhaZburu6qXqAbuPNKJC5HJ5qZ
+        OueeX9X169/737//v9cM82aXWZc+S4ZbDr39SR+PB+k2Xg8O2I55uLeX+8NVZvYp45kudrZvNtxr9ja2
+        HDdC5L43133Oneppy6UIjmtEeLIUK7bLsCxVigWbGjEjUobRgVVqJ++yc+b2n4UwjGX31xz+1d1Muw0Z
+        aDequNg7VNG2JEWLtMMqHPqWx/HzKpy+RPhRhRJC8UUVCs/yyDnJY3WmBpOXazBg4o3KbjYBn9LoBn9L
+        SLd+61c4+4m54I1qpB9RoOAMj3wi2f8dj686cEaFfY9BvxMO0fuiH3jsK+ew8ksO7kE8rIZ8dYphrPq+
+        iQhDi3cO5A4LVCPqSxa5p5XIOqVExikOGSU8MsoI5SpkfP08Mst5ZNK7TOqTRd/klSmxNZ+FdxiPniOv
+        Vhl3cR7xWiLMBuZlDwtSIW6XDGlHWGwpVGDLUSUSj3PYUqxCcokaW0rVSC4jlD9phftSFVJOE4p5pJzg
+        kELfbD+qwLYCOSYtV6K7200JY+Lo+l9FGPdd83n/GUoKnxQbv5Ihdh+L2ENKxOQrsemEArHH5Vh1jENs
+        iQbrS7VYX/YEpfR8WoO4YjXiTpD4ozziDiux4aACG/ezSNwng9diJYycSm4yjHmPl4swHTm4u0c1F0AO
+        j84mh2fLsGIPi/A8BXZ8w0GiaMFdSROyzkmx9IgUYSfViChrRiQhorQJEae1iDxJOKZGZJEKK/PJB/sU
+        WLmbxaocGaLSG9HfjwNjFZ3+UgEGjgWF7sEswrbWIyRNipBMOUJyFQjYxeLEdR7NrQDfDKh0bbgl1iD5
+        eynmHZFjfnETQsv0WFyiQ9ipJiw6pkXoYTVCD/JYtFeJRdksFqXLsHRHI2avbcRbbne1jLHDqOdFmI0c
+        YjG6Vu+3ug7zE+oxl/b23B1yzM1WYnoWi4KfOWj0QKO6DfVqQE5CZE3AydscPjgoht1OOYbs18GnQI+Z
+        hc34+LAWAftVmJ/LISCTJpEmQ0ByIz6Jr8Pbs5UwsI7b/5wAg74pCQP8WfiuqcXUuHpMTZRi6jYW03Zy
+        8EpXIOuiEkoirVURSIAACUFBomr4VnzxkwyOmTXovJ2FTWYz3s1uwgd7NPDL5eH7pQK+qTL4xjfCP64O
+        XmENMHW5Us8wnZz+FGE6+OyVoYH1GBcphvfaenhvkmJcKgvPNA7Wm1nEn2XB6Z6Sd4gQ2joNLUsLcLNO
+        ixVf18FuRy26JishSlVjeBqPCWkKTEiSY8KGBkxcI4HPslpYeonBdHab3y6gi8jGbMQDbmhQDYaHi+Ee
+        VY/hcVK4bGIh2sShG7WJ55TgaLbPEr94L6UlUVGfy9UaBBWJYbWpBhbr5Ri0WYlRm+UYtbYBoyIk8Ayr
+        hu0UOQx6hj4xY1fv0RZedRg09xHeXlCDtz+vg9MqKWzXyWGXwMM8ic6AC9xfCugQJPhDSdEq/bcSkzMr
+        YRFRBYfoRrhENcAlvBaun1bDbpoMhnYp39L0OzNG5jNn9/CWwcG/Eg5B1bAPk8BuZSPs1rOwS1LBPJlD
+        YsULAijsEgGCF57cvxgRhWBUTSuyztKyLL0DUbgE/ULEcJxXhb5TyAeOeTdIQE/G0GJmcA8fGexJgD0J
+        EJEAUZS0XcAWFSxSOSRd4sDTOgtkwpq/Cs+KEfNtkGoBrb4FHtE/oncIjb+gFg5zq9CHBJg4FdwhAX0Z
+        w+5+cyy8pe0CAknAIhIQ2R4Bh2QVepMRUy9zj41GPnuM+peg450grp7ACYKVeiQW/grrT87DNqwGos/E
+        cJhTBevJFIH+eb+SgD4M09V7rPn7dRD5VUIUQAJCJbCPaES/OAUGbFPBPp1D2k8kgA6iDuIGMtyL6HjH
+        UT+2uQ1FV/6A14Yz6B5yCTbLH0G0hDiCxbCfXYlek6QwEqVcIAGWZIN+DmYjflfZTq+CaN4j2IfUwpEi
+        MHAjC9cdPAZlKZF+VQk1DSyQNj4LWueOZ4FY1Qac/62OTs8KOMRehGN8JQbQDnCMlrYvLe00kf8fsBwv
+        g4HVwgOPTShcnZzPXOszmWb+USX6LRBj0KoGuCawcM/g8e4uSse/tAsQyKRE+iyU9DtFHD9XSRF17Ce4
+        pVVg6K4/4EEnoXuWGi5JCgxcTRFdTALmP4KdbyW6eQrnwLBVfxYrRn3WJ/YkVQ6zSPFCMVxX18M9iUos
+        OglH7FYg95oCZGgIe10muJu2GUt7nqyA36Q84r++hnG5FfA6fB9TqFaYfFqHcQVaeGbzcEtm4RLTAKfF
+        HQasRSeX81KatvfT49jEdVjXUdVtDjOr4Bxag2Ex9fBMlsGHcsGYvXLkXWcfCxDI5UQuECt0rci/egd+
+        e77DlOO3EUBl2ceXWzDnBz1mlDThQ0pIPrs4eKTI8R4dQoPDaAtShC3Hy2FoHfNNuwGfuUwcD5TbTJfB
+        dVE1Rq6tw9gUKT7IUWB8nhwHb7IgU0NDa8zp23Du7iNEHLkA/6KfsfAypedf9Qi70YKQK3oEnWvGHKoV
+        pheqMDFXCS/KA8PX1cN1SQ36zRLDzP1eC2XDcKI2fj4jdn7Po7tnlW7wpxKMXivBeBIwNYcSFBUV0eVi
+        3Gvgcfl3CdYcrcDc/EsIu1SDmHs6rP2tFatvtyDilg5LrzYj5HwTAss0mFXEYwql83GUWT3XSTBkcQ16
+        f6ig2UcJJ6DjS2sCo14RCX2n0dkdJcGk1AbMyKF8X0gp9Xgjgo/cRWDRTSz+vhKxtzXYXNmK+KpWaluw
+        4b4eMf/SYeW1ZoRXaPEZlWrz6DvfXDkmpjZidEwt+gew6DS4RMwwpr5EbvSq0szExGFnseM8FXw2NsCf
+        KpnAwwoqOHgsu6BG9HUtNt7TI6mqBVtrW7C9rr1NrNRjwx0dVt9owvIKDULJiB9TLelPdeUEqi+cFyrQ
+        dfh1FYU+koi7vYq843dL039kfyOIGJ8gR9AhFkuEMvuiGrG3mpBwX4dtNXpkylqQRXswg9qt9Bx/rxnr
+        SEBkhRph1D+4gOoJKkTeCVXBzO0Kz5g6xxFBr78i73hvYWQdkWU9qVI/Jk5Lg5EA+jOy4ZYWW35vxg6J
+        HjlEvodcKbRf1FJU7jcj7qYWURdUCDmmpCXkKewcOjvtvsMYWoXSwL1fl/xpP1PXGWbOBbcGBFJpvVWH
+        UKr51v3ShOQHOqQ3UKZjKQINLUh+qEPstSaEl2vhR9XQ0GUaWI6+yhv1+OgQDTaW8Nabkz/9worp8n74
+        WwMyLtp++E/10HAWPvHN8N3Zilm72+CX04aJKXq4RXBwnPWwtft7Jx4ZWQYWMIzZHBrC5s/T7n9R8ORb
+        c4axGMOYjlxh1GNehrFNxLFOojVlJnbRpca9FuYbmPmkMIa2Qqg9nqy14f+B85VDCNvIjCD8yRAgOLvT
+        35ntfwAY5mrRRfJYnQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>116, 17</value>
   </metadata>
